--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ requests>=2.32.0
 python-dotenv>=1.0.0
 autoflake>=2.3.0
 black>=24.0.0
+allure-pytest>=2.13.0
+structlog>=23.0.0
+curlify2>=1.0.0
 
 # Development dependencies (optional)
 ruff>=0.8.0
 isort>=5.13.0
 mypy>=1.0.0
 pytest>=8.0.0
-allure-pytest>=2.13.0
